# codewalk

./: .gitignore  CLAUDE.md  Cargo.toml  MEMORY.md  REVIEW.md  codegraph_arch.md
codegraph_rust/codegraph-cli/: Cargo.toml
codegraph_rust/codegraph-cli/src/: main.rs  mcp.rs  server_instructions.rs
codegraph_rust/codegraph-core/: Cargo.toml
codegraph_rust/codegraph-core/src/: db.rs  graph.rs  lib.rs  schema.sql  types.rs
codegraph_rust/codegraph-core/src/context/: budgets.rs  explore.rs  mod.rs  symbols.rs
codegraph_rust/codegraph-core/src/extraction/: engine.rs  extractor.rs  fn_ref.rs  grammars.rs  mod.rs
codegraph_rust/codegraph-core/src/extraction/languages/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
codegraph_rust/codegraph-core/src/resolution/: builtins.rs  graph.rs  import_resolver.rs  mod.rs  name_matcher.rs  synth.rs
codegraph_rust/codegraph-core/src/search/: mod.rs  query_utils.rs
codegraph_rust/codegraph-node/: Cargo.toml
codegraph_rust/codegraph-node/src/: lib.rs
crates/codewalk-cli/: Cargo.toml
crates/codewalk-cli/src/: main.rs
crates/codewalk-kb/: Cargo.toml
crates/codewalk-kb/src/: lib.rs
docs/: codewalk_rust_arch.md  kickoff-prompt-m3.md  kickoff-prompt.md  rust-build-plan.md  vibe_summaries.md
